--- a/jcasc.yml
+++ b/jcasc.yml
@@ -29,6 +29,15 @@ unclassified:
               credentialsId: "cbdays-github-token"
               repoOwner: "cloudbees-days"
               repository: "pipeline-library"
+    - defaultVersion: "master"
+      name: "kypseli"
+      retriever:
+        modernSCM:
+          scm:
+            github:
+              credentialsId: "cbdays-github-token"
+              repoOwner: "kypseli"
+              repository: "pipeline-library"
 credentials:
   system:
     domainCredentials:
